<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Label1">Listed Price</string>
    <string name="hint">Enter Listed Price</string>
    <string name="text1"></string>
    <string name="Label2">Discount %</string>
    <string name="radio_ten">10%</string>
    <string name="radio_25">25%</string>
    <string name="radio_50">50%</string>
    <string name="radio_custom">Custom</string>
    <string name="custom_bar">Custom</string>
    <string name="percentage">0%</string>
    <string name="saved">You Saved</string>
    <string name="saved_value">$ 0.00</string>
    <string name="pay">You Pay</string>
    <string name="exit">Exit</string>

</resources>
